--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -47,17 +47,22 @@
 // Button Variants
 @mixin btn-solid($color) {
   background-color: theme-color($color);
-  color: if($color == 'light', black, white);//var(--text-inverse);
+  color: if($color == 'light', black, white); /* var(--text-inverse); */
 
+  &:disabled { background-color: theme-color($color, 'disabled'); }
   &:hover:not(:disabled) { background-color: theme-color($color, 'hover'); }
   &:active:not(:disabled) { background-color: theme-color($color, 'active'); }
-  &:disabled { background-color: theme-color($color, 'disabled'); }
 }
 
 @mixin btn-outline($color) {
   background-color: transparent;
   border-color: theme-color($color);
   color: theme-color($color);
+  
+  &:disabled {
+    border-color: theme-color($color, 'disabled');
+    color: theme-color($color, 'disabled');
+  }
 
   &:hover:not(:disabled) {
     background-color: theme-color($color);
@@ -67,16 +72,15 @@
   &:active:not(:disabled) {
     background-color: theme-color($color, 'active');
   }
-
-  &:disabled {
-    border-color: theme-color($color, 'disabled');
-    color: theme-color($color, 'disabled');
-  }
 }
 
 @mixin btn-ghost($color) {
   background-color: transparent;
   color: theme-color($color);
+
+  &:disabled {
+    color: theme-color($color, 'disabled');
+  }
 
   &:hover:not(:disabled) {
     background-color: theme-color($color, '10');
@@ -84,10 +88,6 @@
 
   &:active:not(:disabled) {
     background-color: theme-color($color, '25');
-  }
-
-  &:disabled {
-    color: theme-color($color, 'disabled');
   }
 }
 
@@ -124,22 +124,36 @@
 @mixin btn-group-base {
   display: inline-flex;
   position: relative;
-
-  // Remove double borders between buttons
-  .btn:not(:first-child) { margin-left: -1px; }
-
+  .btn { position: relative; }
+  
   // Handle z-index for hover states
   .btn:hover { z-index: 1; }
 
-  // Basic button group styles
-  .btn { position: relative; }
-  .btn:not(:first-child):not(:last-child) { border-radius: 0; }
-  .btn:first-child:dir(ltr) { border-top-right-radius: 0rem; border-bottom-right-radius: 0rem; }
-  .btn:last-child:dir(ltr) { border-top-left-radius: 0rem; border-bottom-left-radius: 0rem; }
+  // Remove double borders between buttons
+  .btn:not(:first-child) { margin-left: -1px; }
+  
+  .btn:not(:first-child, :last-child) { border-radius: 0; }
+  
+  .btn:first-child:dir(ltr) { 
+    border-top-right-radius: 0; 
+    border-bottom-right-radius: 0; 
+  }
+  
+  .btn:last-child:dir(ltr) { 
+    border-top-left-radius: 0; 
+    border-bottom-left-radius: 0; 
+  }
   
   @if $enable-rtl {
-    .btn:first-child:dir(rtl) { border-top-left-radius: 0rem; border-bottom-left-radius: 0rem; }
-    .btn:last-child:dir(rtl) { border-top-right-radius: 0rem; border-bottom-right-radius: 0rem; }
+    .btn:first-child:dir(rtl) { 
+      border-top-left-radius: 0; 
+      border-bottom-left-radius: 0; 
+    }
+    
+    .btn:last-child:dir(rtl) { 
+      border-top-right-radius: 0; 
+      border-bottom-right-radius: 0; 
+    }
   }
 }
 
@@ -207,6 +221,7 @@
 
 .btn-group {
   @include btn-group-base;
+
    // Color variants for solid buttons
    @each $name, $color in $colors {
     &.#{$name} > .btn{
@@ -214,10 +229,12 @@
     }
   }
 }
+
 // Outline variant
 .btn-group.outline > .btn {
   @include btn-outline('text-secondary'); // Default outline style
 }
+
 // Color variants override
 @each $name, $color in $colors {
   .btn-group.outline.#{$name} > .btn {
@@ -230,6 +247,7 @@
 .btn-group.ghost > .btn {
   @include btn-ghost('text-secondary'); // Default outline style
 }
+
 // Color variants override
 @each $name, $color in $colors {
   .btn-group.ghost.#{$name} > .btn {
