--- a/src/styles/utilities/_tooltips.scss
+++ b/src/styles/utilities/_tooltips.scss
@@ -7,7 +7,6 @@
 [data-tooltip][role~="tooltip"]::before,
 [data-tooltip][role~="tooltip"]::after {
     transform: translate3d(0, 0, 0);
-    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     will-change: transform;
     opacity: 0;
@@ -25,7 +24,7 @@
 }
 
 [data-tooltip][role~="tooltip"]::after {
-    background: var(--tooltip-bg); //rgba(17, 17, 17, .95);
+    background: var(--tooltip-bg); // todo: change to a variable
     box-shadow: 0 3px 7px var(--tooltip-shadow-color);
     border-radius: 4px;
     color: #fff;
@@ -47,17 +46,17 @@
 }
 
 [role~="tooltip"][data-microtip-position|="top"]::before {
-    background: url(data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2236px%22%20height%3D%2212px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%280%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E) no-repeat;
+    background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2236px%22%20height%3D%2212px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%280%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E") no-repeat;
     height: 6px;
     width: 18px;
-    margin-bottom: 5px
+    margin-bottom: 5px;
+    transform: translate3d(-50%, 0, 0);
+    bottom: 100%;
+    left: 50%
 }
 
 [role~="tooltip"][data-microtip-position|="top"]::after {
-    margin-bottom: 11px
-}
-
-[role~="tooltip"][data-microtip-position|="top"]::before {
+    margin-bottom: 11px;
     transform: translate3d(-50%, 0, 0);
     bottom: 100%;
     left: 50%
@@ -65,12 +64,6 @@
 
 [role~="tooltip"][data-microtip-position|="top"]:hover::before {
     transform: translate3d(-50%, -5px, 0)
-}
-
-[role~="tooltip"][data-microtip-position|="top"]::after {
-    transform: translate3d(-50%, 0, 0);
-    bottom: 100%;
-    left: 50%
 }
 
 [role~="tooltip"][data-microtip-position="top"]:hover::after {
@@ -96,33 +89,30 @@
 }
 
 [role~="tooltip"][data-microtip-position|="bottom"]::before {
-    background: url(data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2236px%22%20height%3D%2212px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%28180%2018%206%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E) no-repeat;
+    background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2236px%22%20height%3D%2212px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%28180%2018%206%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E") no-repeat;
     height: 6px;
     width: 18px;
     margin-top: 5px;
-    margin-bottom: 0
-}
-
-[role~="tooltip"][data-microtip-position|="bottom"]::after {
-    margin-top: 11px
-}
-
-[role~="tooltip"][data-microtip-position|="bottom"]::before {
+    margin-bottom: 0;
     transform: translate3d(-50%, -10px, 0);
     bottom: auto;
     left: 50%;
     top: 100%
 }
 
-[role~="tooltip"][data-microtip-position|="bottom"]:hover::before {
-    transform: translate3d(-50%, 0, 0)
-}
-
 [role~="tooltip"][data-microtip-position|="bottom"]::after {
+    margin-top: 11px;
     transform: translate3d(-50%, -10px, 0);
     top: 100%;
     left: 50%
 }
+
+
+
+[role~="tooltip"][data-microtip-position|="bottom"]:hover::before {
+    transform: translate3d(-50%, 0, 0)
+}
+
 
 [role~="tooltip"][data-microtip-position="bottom"]:hover::after {
     transform: translate3d(-50%, 0, 0)
@@ -148,15 +138,12 @@
 
 [role~="tooltip"][data-microtip-position="left"]::before,
 [role~="tooltip"][data-microtip-position="left"]::after {
-    bottom: auto;
-    left: auto;
-    right: 100%;
-    top: 50%;
+    inset: auto auto auto 100%;
     transform: translate3d(10px, -50%, 0)
 }
 
 [role~="tooltip"][data-microtip-position="left"]::before {
-    background: url(data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2212px%22%20height%3D%2236px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%28-90%2018%2018%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E) no-repeat;
+    background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2212px%22%20height%3D%2236px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%28-90%2018%2018%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E") no-repeat;
     height: 18px;
     width: 6px;
     margin-right: 5px;
@@ -181,7 +168,7 @@
 }
 
 [role~="tooltip"][data-microtip-position="right"]::before {
-    background: url(data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2212px%22%20height%3D%2236px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%2890%206%206%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E) no-repeat;
+    background: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2212px%22%20height%3D%2236px%22%3E%3Cpath%20fill%3D%22rgba%2817,%2017,%2017,%200.9%29%22%20transform%3D%22rotate%2890%206%206%29%22%20d%3D%22M2.658,0.000%20C-13.615,0.000%2050.938,0.000%2034.662,0.000%20C28.662,0.000%2023.035,12.002%2018.660,12.002%20C14.285,12.002%208.594,0.000%202.658,0.000%20Z%22/%3E%3C/svg%3E") no-repeat;
     height: 18px;
     width: 6px;
     margin-bottom: 0;
