--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@
 
 // Utilities
 @forward 'utilities/animations';
-@forward 'utilities/borders'; 
+@forward 'utilities/borders';
 @forward 'utilities/colors';
 @forward 'utilities/display';
 @forward 'utilities/opacity';
@@ -34,3 +34,5 @@
 @forward 'components/hamburger';
 @forward 'components/navbar';
 @forward 'components/form';
+
+@forward './mixins-map';
