--- a/src/styles/layouts/_flex.scss
+++ b/src/styles/layouts/_flex.scss
@@ -1,5 +1,6 @@
 @use 'sass:math';
 @use '../utilities/variables' as *;
+@use '../utilities/functions' as *;
 
 // Flex Container Mixins
 @mixin flex {display: flex;}
