--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -7,7 +7,7 @@
   padding: 0;
 }
 
-// Remove default margin
+// Remove default margin and padding
 body,
 h1,
 h2,
@@ -21,6 +21,7 @@ blockquote,
 dl,
 dd {
   margin: 0;
+  padding: 0;
 }
 
 // Set core body defaults
@@ -51,11 +52,6 @@ textarea,
 select {
   font: inherit;
   transition: all 0.2s ease-in-out;
-  
-  &:focus {
-      box-shadow: inset 0 0 7px 0 #60b0cd; /* Change this to your preferred color and width */
-      outline: 2px solid #40c1bf; /* Change this to your preferred color and width */
-  }
 }
 
 // Remove all animations and transitions for people that prefer not to see them
